Mon Mar  3 14:52:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Generator_Parser.h:
        * tao/GIOP_Message_Generator_Parser_10.h:
        * tao/GIOP_Message_Generator_Parser_11.h:
        * tao/GIOP_Message_Generator_Parser_12.h:
        * tao/GIOP_Message_Generator_Parser_Impl.h:
          No need to export these classes from the TAO library

Sat Mar  1 19:14:30 UTC 2008  William Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/mcpp.mpb:
        * TAO_IDL/contrib/mcpp/directive.cpp:
        * TAO_IDL/contrib/mcpp/expand.cpp:
        * TAO_IDL/contrib/mcpp/main.cpp:
        * TAO_IDL/driver/drv_mcpp_preproc.cpp:
        * TAO_IDL/preproc.mpb:

          Fuzz fixes.

Fri Feb 29 16:24:43 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:

          Fixed signed/unsigned mismatch warning on Debian, introduced
          by changes in

          Thu Feb 28 19:16:43 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

Fri Feb 28 10:54:37 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3154_Regression/run_test.pl:
          Updated for VxWorks cross platform testing

Thu Feb 28 19:16:43 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/EnumDef_i.h:
        * orbsvcs/orbsvcs/IFRService/ConstantDef_i.h:

          Cosmetic changes.

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:

          Changed creation of IOR output file to use
          ACE_DEFAULT_FILE_PERMS. Also added more error checking to
          cover the open, write and close steps. Thanks to Jules
          Colding <colding at 42tools dot com> for reporting that
          the previous code created a file that was world writable.

Thu Feb 28 13:26:12 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/contrib/mcpp/eval.cpp:
        * TAO_IDL/contrib/mcpp/expand.cpp:
        * TAO_IDL/contrib/mcpp/mbchar.cpp: