@@ -26,13 +26,6 @@ TAO::ORB_Table::end (void)
   return this->table_.end ();
 }
 
-ACE_INLINE ::TAO_ORB_Core* const *
-TAO::ORB_Table::get_orbs (size_t& num_orbs)
-{
-  num_orbs = this->num_orbs_;
-  return this->orbs_;
-}
-
 /// Accessor to the underlying table_
 ACE_INLINE TAO::ORB_Table::Table *
 TAO::ORB_Table::table (void)
